--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,10 +2,15 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-# Install required tools
+# ---------- Install utilities ----------
+USER root
 RUN apt-get update && apt-get install -y \
-    curl unzip zip git wget \
-    && rm -rf /var/lib/apt/lists/*
+    wget \
+    curl \
+    unzip \
+    gnupg2 \
+    xvfb \
+    --no-install-recommends
 
 # Install Maven
 ARG MAVEN_VERSION=3.9.9
@@ -27,6 +32,25 @@ RUN wget https://github.com/allure-framework/allure2/releases/download/${ALLURE_
 
 ENV ALLURE_HOME=/opt/allure-${ALLURE_VERSION}
 ENV PATH=$ALLURE_HOME/bin:$PATH
+
+
+# ============
+# Install JMeter
+# ============
+ARG JMETER_VERSION=5.6.2
+ENV JMETER_HOME=/opt/apache-jmeter-${JMETER_VERSION}
+ENV PATH=$JMETER_HOME/bin:$PATH
+
+RUN wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-${JMETER_VERSION}.tgz -P /tmp \
+    && tar -xzf /tmp/apache-jmeter-${JMETER_VERSION}.tgz -C /opt \
+    && rm /tmp/apache-jmeter-${JMETER_VERSION}.tgz
+
+# ---------- Install Google Chrome ----------
+RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" \
+    > /etc/apt/sources.list.d/google-chrome.list && \
+    apt-get update && \
+    apt-get install -y google-chrome-stable \
 
 # Switch back to Jenkins user
 USER jenkins
