--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <io.appium.version>9.5.0</io.appium.version>
         <selenium.java>4.34.0</selenium.java>
         <testng.version>7.8.0</testng.version>
-        <aspectj.weaver>1.9.25</aspectj.weaver><!--        appium-->
+        <aspectj.weaver>1.9.21</aspectj.weaver><!--        appium-->
         <guava.version>33.0.0-jre</guava.version><!--        selenium-->
         <fasterxml.version>2.16.0</fasterxml.version>
         <allure.version>2.25.0</allure.version>
@@ -129,18 +129,18 @@
         </dependency>
 
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.24/aspectjweaver-1.9.24.jar
-                    </argLine>
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <argLine>-->
+<!--                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.24/aspectjweaver-1.9.24.jar-->
+<!--                    </argLine>-->
+<!--                    <testFailureIgnore>true</testFailureIgnore>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 </project>
