--- a/pom.xml
+++ b/pom.xml
@@ -155,12 +155,16 @@
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <useManifestOnlyJar>false</useManifestOnlyJar>
                     <enableAssertions>true</enableAssertions>
-
-                    <!--  Prevent Surefire from injecting AspectJ agent -->
                     <skipAfterFailureCount>1</skipAfterFailureCount>
                     <additionalClasspathElements/>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
         </plugins>
+
     </build>
 </project>
